Fix some layout issues

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -278,7 +278,7 @@ select option {
 }
 
 .divider {
-  margin: 0 5px 0 5px
+  margin: 0 5px 0 5px;
 }
 
 #comment-settings {
